# test_zarma

./: .flake8  .gitignore  1.py  2.py  3.py  4.py  products.csv  pyproject.toml  sales.json  task.txt  test.sqlite
